# wasm-posix-kernel

./: .gitignore  .gitmodules  CLAUDE.md  COPYING.runtime  Cargo.toml  LICENSE  MANIFEST  README.md  TODO-kernel-refactoring.md  build.sh  flake.nix  package-lock.json  package.json  run.sh  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: durable-release-lock.sh
.github/workflows/: docs.yml  force-rebuild.yml  prepare-merge.yml  staging-build.yml  staging-cleanup.yml
abi/: binaries-lock.schema.json  manifest.json  manifest.schema.json  snapshot.json
api/: hierarchy.html  index.html
api/assets/: hierarchy.js  navigation.js  search.js
api/classes/: browser.BrowserWorkerAdapter.html  index.BrowserTimeProvider.html  index.CentralizedKernelWorker.html  index.DeviceFileSystem.html  index.DynamicLinker.html  index.FetchNetworkBackend.html  index.HostFileSystem.html  index.MemoryFileSystem.html  index.MockWorkerAdapter.html  index.MockWorkerHandle.html  index.NodeKernelHost.html  index.NodePlatformIO.html  index.NodeTimeProvider.html  index.NodeWorkerAdapter.html  index.OpfsChannel.html  index.OpfsFileSystem.html  index.SharedLockTable.html  index.SharedPipeBuffer.html  index.SyscallChannel.html  index.TcpNetworkBackend.html  index.ThreadPageAllocator.html  index.VirtualPlatformIO.html  index.WasiExit.html  index.WasiShim.html  index.WasmPosixKernel.html
api/enums/: index.ChannelStatus.html  index.OpfsChannelStatus.html  index.OpfsOpcode.html
api/functions/: index.binariesDir.html  index.centralizedThreadWorkerMain.html  index.centralizedWorkerMain.html  index.decompressVfsImage.html  index.findRepoRoot.html  index.isWasiModule.html  index.loadSharedLibrary.html  index.loadSharedLibrarySync.html  index.loadVfsImage.html  index.localBinariesDir.html  index.parseDylinkSection.html  index.resolveBinary.html  index.resolveForBrowser.html  index.resolveForNode.html  index.tryResolveBinary.html  index.wasiModuleDefinesMemory.html  index.wasiModuleImportsMemory.html
api/interfaces/: index.AlarmSetMessage.html  index.BrowserResolverOptions.html  index.CentralizedKernelCallbacks.html  index.CentralizedThreadInitMessage.html  index.CentralizedWorkerInitMessage.html  index.DeliverSignalMessage.html  index.DirEntry.html  index.DylinkMetadata.html  (+29 more)
benchmarks/: compare.ts  run.ts  types.ts
docs/: IDEAS.md  abi-versioning.md  architecture.md  binary-releases.md  browser-support.md  compromising-xfails.md  future-improvements.md  libc-test-failures.md  package-management-future-work.md  package-management.md  porting-guide.md  posix-status.md  posix-test-report.md  profiling.md  sdk-guide.md  software-targets.md  wasm-limitations.md
examples/: README.md  abort_test.c  dirs.c  echo.c  environ.c  files.c  flock_test.c  fprintf.c  gencat.c  getaddrinfo_test.c  getpwent_smoke.c  hello.c  lsof.c  malloc.c  math.c  mmap_file_test.c  mount_probe_test.c  putenv_test.c  run-example.ts  run-hello.ts  snprintf.c  spawn-coverage.c  spawn-pause.c  spawn-smoke.c  strings.c  sysv_ipc_test.c  test-pthread.c  test-sigpending.c  wasm_trap_test.c
glue/: abi_constants.h  channel_syscall.c  compiler_rt.c  cxxrt.c  dlopen.c  gl_abi.h  libegl_stub.c  libglesv2_stub.c  syscall_glue.c  syscall_imports.h
host/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
libc-test-overlay/: mtest.h
local-binaries/: kernel.wasm
programs/: audiotest.c  cpp_throw_test.cpp  cube.c  exec-caller.c  exec-child.c  fbtest.c  fork-exec.c  fork-from-thread.c  gltri.c  hello64.c  ifhwaddr.c  mmap_shared_test.c  mousetest.c  sdl2-event.c  sdl2-smoke.c  sh.c  stdin-reader.c
scripts/: backfill-binary-blocks.sh  browser-mariadb-test-runner.ts  browser-test-runner.ts  build-gles-stubs.sh  build-libcxx.sh  build-mariadb-test-bundle.sh  build-musl.sh  build-program.sh  build-programs.sh  build-rootfs.sh  check-abi-version.sh  deploy-gh-pages.sh  dev-shell.sh  fetch-binaries.sh  install-local-binary.sh  install-overlay-headers.sh  materialize-pr-overlays.sh  prune-staging-release.sh  publish-pr-staging.sh  publish-release.sh  reproducibility-audit.sh  resolve-binary.sh  run-browser-libc-tests.sh  run-browser-mariadb-tests.sh  run-browser-posix-tests.sh  run-browser-sortix-tests.sh  run-libc-tests.sh  run-mariadb-tests.sh  run-nginx-tests.sh  run-posix-tests.sh  run-sortix-tests.sh  run-sqlite-tests.sh  run-sqlite-upstream-tests.sh  stage-pr-staging.sh  stage-release.sh  test-allow-stale.sh  test-fetch-binaries-overlay.sh  verify-release.sh
sdk/: activate.sh  config.site  package-lock.json  package.json  tsconfig.json
tools/: ipc-struct-offsets.c
xtask/: Cargo.toml  README.md
xtask/src/: archive_stage.rs  archive_stage_cli.rs  build_deps.rs  build_index.rs  build_manifest.rs  bundle_program.rs  deps_manifest.rs  dump_abi.rs  host_tool_probe.rs  install_release.rs  main.rs  pkg_manifest.rs  remote_fetch.rs  source_extract.rs  stage_pr_overlay.rs  stage_release.rs  update_pkg_manifest.rs  util.rs  wasm_abi.rs
(+2141 files in other folders)
