[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/kernel",
    "crates/userspace",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/brandonpayton/wasm-posix-kernel"
description = "A POSIX-compliant kernel for WebAssembly"

[profile.release]
lto = true
opt-level = "s"
strip = true
